APIs/googleapis.com/pagespeedonline/v4/python-client/README.md
# openapi-client
Analyzes the performance of a web page and provides tailored suggestions to make that page faster.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v4
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://www.googleapis.com/pagespeedonline/v4
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://www.googleapis.com/pagespeedonline/v4"
)



# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.PagespeedapiApi(api_client)
    url = 'url_example' # str | The URL to fetch and analyze
    alt = json # str | Data format for the response. (optional) (default to json)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional) (default to True)
    quota_user = 'quota_user_example' # str | An opaque string that represents a user for quota purposes. Must not exceed 40 characters. (optional)
    user_ip = 'user_ip_example' # str | Deprecated. Please use quotaUser instead. (optional)
    filter_third_party_resources = False # bool | Indicates if third party resources should be filtered out before PageSpeed analysis. (optional) (default to False)
    locale = 'locale_example' # str | The locale used to localize formatted results (optional)
    rule = ['rule_example'] # List[str] | A PageSpeed rule to run; if none are given, all rules are run (optional)
    screenshot = False # bool | Indicates if binary data containing a screenshot should be included (optional) (default to False)
    snapshots = False # bool | Indicates if binary data containing snapshot images should be included (optional) (default to False)
    strategy = 'strategy_example' # str | The analysis strategy (desktop or mobile) to use, and desktop is the default (optional)
    utm_campaign = 'utm_campaign_example' # str | Campaign name for analytics. (optional)
    utm_source = 'utm_source_example' # str | Campaign source for analytics. (optional)

    try:
        api_response = api_instance.pagespeedonline_pagespeedapi_runpagespeed(url, alt=alt, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, user_ip=user_ip, filter_third_party_resources=filter_third_party_resources, locale=locale, rule=rule, screenshot=screenshot, snapshots=snapshots, strategy=strategy, utm_campaign=utm_campaign, utm_source=utm_source)
        print("The response of PagespeedapiApi->pagespeedonline_pagespeedapi_runpagespeed:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling PagespeedapiApi->pagespeedonline_pagespeedapi_runpagespeed: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/pagespeedonline/v4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*PagespeedapiApi* | [**pagespeedonline_pagespeedapi_runpagespeed**](docs/PagespeedapiApi.md#pagespeedonline_pagespeedapi_runpagespeed) | **GET** /runPagespeed | 


## Documentation For Models

 - [PagespeedApiFormatStringV4](docs/PagespeedApiFormatStringV4.md)
 - [PagespeedApiFormatStringV4ArgsInner](docs/PagespeedApiFormatStringV4ArgsInner.md)
 - [PagespeedApiFormatStringV4ArgsInnerRectsInner](docs/PagespeedApiFormatStringV4ArgsInnerRectsInner.md)
 - [PagespeedApiImageV4](docs/PagespeedApiImageV4.md)
 - [PagespeedApiPagespeedResponseV4](docs/PagespeedApiPagespeedResponseV4.md)
 - [PagespeedApiPagespeedResponseV4FormattedResults](docs/PagespeedApiPagespeedResponseV4FormattedResults.md)
 - [PagespeedApiPagespeedResponseV4FormattedResultsRuleResultsValue](docs/PagespeedApiPagespeedResponseV4FormattedResultsRuleResultsValue.md)
 - [PagespeedApiPagespeedResponseV4FormattedResultsRuleResultsValueUrlBlocksInner](docs/PagespeedApiPagespeedResponseV4FormattedResultsRuleResultsValueUrlBlocksInner.md)
 - [PagespeedApiPagespeedResponseV4FormattedResultsRuleResultsValueUrlBlocksInnerUrlsInner](docs/PagespeedApiPagespeedResponseV4FormattedResultsRuleResultsValueUrlBlocksInnerUrlsInner.md)
 - [PagespeedApiPagespeedResponseV4LoadingExperience](docs/PagespeedApiPagespeedResponseV4LoadingExperience.md)
 - [PagespeedApiPagespeedResponseV4LoadingExperienceMetricsValue](docs/PagespeedApiPagespeedResponseV4LoadingExperienceMetricsValue.md)
 - [PagespeedApiPagespeedResponseV4LoadingExperienceMetricsValueDistributionsInner](docs/PagespeedApiPagespeedResponseV4LoadingExperienceMetricsValueDistributionsInner.md)
 - [PagespeedApiPagespeedResponseV4PageStats](docs/PagespeedApiPagespeedResponseV4PageStats.md)
 - [PagespeedApiPagespeedResponseV4RuleGroupsValue](docs/PagespeedApiPagespeedResponseV4RuleGroupsValue.md)
 - [PagespeedApiPagespeedResponseV4Version](docs/PagespeedApiPagespeedResponseV4Version.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization

Endpoints do not require authorization.


## Author




